--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
     <!-- JavaScript -->
     <script>
         // お問い合わせフォームの送信処理
-        document.querySelector("form").addEventListener("submit", function(e) {
+        document.querySelector(".contact-form form").addEventListener("submit", function(e) {
             e.preventDefault();
         
             var formData = {
