--- a/index.html
+++ b/index.html
@@ -968,7 +968,8 @@
                 fetch("https://script.google.com/macros/s/AKfycbwIBLxkpNJxQz2FW-RQaq2YEidt-dicFNHyLaABQrftYqGWc1BmHgwqLFxG8McLPU5S/exec", {
                     method: "POST",
                     body: JSON.stringify(formData),
-                    headers: { "Content-Type": "application/json" }
+                    headers: { "Content-Type": "application/json" },
+                    mode: "cors" // CORSを有効にする
                 })
                 .then(response => response.json())
                 .then(data => {
